[project]
name = "learn-jax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flax>=0.11.2",
    "jax[cuda12]>=0.7.1",
    "optax>=0.2.5",
    "regex>=2025.9.1",
    "scikit-learn>=1.7.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
